--- a/NormativeCalculatorAPI/NormativeCalculatorAPI/NormativeCalculator.DTOs/NormativeCalculator.DTOs.csproj
+++ b/NormativeCalculatorAPI/NormativeCalculatorAPI/NormativeCalculator.DTOs/NormativeCalculator.DTOs.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NormativeCalculator.Database\NormativeCalculator.Database.csproj" />
+  </ItemGroup>
+
 </Project>
