--- a/NormativeCalculatorUI/client/package.json
+++ b/NormativeCalculatorUI/client/package.json
@@ -18,10 +18,13 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^7.4.0",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^4.5.3",
     "ngx-bootstrap": "^7.1.0",
     "ngx-cookie-service": "^12.0.0",
+    "ngx-toastr": "^14.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
